--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fontsource/open-sans": "^5.0.5",
     "autoprefixer": "10.4.14",
+    "chart.js": "^4.3.3",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.7",
     "next": "^13.4.7",
@@ -18,6 +19,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "recharts": "^2.7.2",
     "tailwindcss": "3.3.2"
   }
 }
