--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-tabs": "^6.0.2",
     "recharts": "^2.7.2",
     "tailwindcss": "3.3.2"
   }
