--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fontsource/open-sans": "^5.0.5",
     "autoprefixer": "10.4.14",
     "chart.js": "^4.3.3",
+    "datatables.net-dt": "^1.13.6",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.7",
     "next": "^13.4.7",
@@ -19,6 +20,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-table": "^7.8.0",
     "react-tabs": "^6.0.2",
     "recharts": "^2.7.3",
     "tailwindcss": "3.3.2"
