--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "^13.4.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-datatable": "^0.0.31",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-table": "^7.8.0",
