--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-table": "^7.8.0",
     "react-tabs": "^6.0.2",
     "recharts": "^2.7.3",
+    "sweetalert2": "^11.7.22",
     "tailwindcss": "3.3.2"
   }
 }
