--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "datatables.net-dt": "^1.13.6",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.7",
+    "jsonwebtoken": "^9.0.2",
     "next": "^13.4.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
