Display QR Code

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react": "18.2.0",
     "react-datatable": "^0.0.31",
     "react-dom": "18.2.0",
-    "react-icons": "^4.10.1",
+    "react-icons": "^4.11.0",
+    "react-qr-code": "^2.0.12",
     "react-table": "^7.8.0",
     "react-tabs": "^6.0.2",
     "recharts": "^2.7.3",
