--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-config-next": "13.4.7",
     "jsonwebtoken": "^9.0.2",
     "next": "^13.5.1",
+    "papaparse": "^5.4.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-datatable": "^0.0.31",
