--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-tabs": "^6.0.2",
     "recharts": "^2.7.3",
     "sweetalert2": "^11.7.22",
+    "sweetalert2-react-content": "^5.0.7",
     "tailwindcss": "3.3.2"
   }
 }
