--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.7",
     "jsonwebtoken": "^9.0.2",
-    "next": "^13.5.1",
+    "next": "^14.0.1",
     "papaparse": "^5.4.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
@@ -28,6 +28,7 @@
     "react-table": "^7.8.0",
     "react-tabs": "^6.0.2",
     "recharts": "^2.7.3",
+    "sharp": "^0.32.6",
     "sweetalert2": "^11.7.22",
     "tailwindcss": "3.3.2"
   }
